--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,67 @@ header {
    color: white; 
    padding: 0 15px;
 }
-span {
+
+/*Utility Classes*/
+a {
+   text-decoration: none;
+}
+
+span, 
+#current {
    color: #f7c08a
 }
 
-/*Navbar*/
-
-#navbar {
-   display: flex
+.bg-light {
+   color: #333;
+   background: #fff;
 }
+
+.bg-dark {
+   background: #333;
+   color: white;   
+}
+
+.bg-color {
+   background: #f7c08a;
+}
+
+.btn {
+   padding: 12px;
+   display: inline-block;
+   font-size: 16px;
+   margin: 0px auto;
+   border: none;
+   cursor: pointer;
+}
+ 
+.btn:hover {
+   background-color: #f7c08a;
+}
+
+.feature-box {
+   text-align: center;
+   height: 100%;
+   float: left;
+   padding: 50px;
+   width: 33.3%
+}
+
+.clr {
+   clear: both;
+}
+
+/*Navbar*/
 
 .logo {
    flex: 1
 }
 
-#navbar a{ 
+.navbar {
+   display: flex
+}
+
+.navbar a{ 
    color: white; 
    text-decoration: none;
    display: block;
@@ -70,38 +116,7 @@ span {
    padding-bottom: 25px;
 }
 
-#btn-about {
-   padding: 15px;
-   background-color: #333;
-   color: white;
-   display: block;
-   font-size: 18px;
-   margin: 0px auto;
-   border: none;
-   cursor: pointer;
-}
-
-#btn-about:hover, 
-.btn:hover {
-   background-color: #f7c08a;
-}
-
-.btn-light {
-   display: inline-block;
-   font-size: 18px;
-   color: #fff;
-   background: #333;
-   padding: 13px 20px; 
-   border: none;
-   cursor: pointer;
-}
-
-
-a {
-   text-decoration: none;
-}
-
-/*Home Info*/
+/*Home-History Info*/
 
 #history {
    height: 400px;
@@ -138,46 +153,21 @@ a {
    padding-bottom: 20px;  
 }
 
-.info-content a {
-   background: #fff;
-   color: #333;
-}
-
-.info-content a:hover {
-   background: #f7c08a;
-   cursor: pointer;
-}
+/*Home Feature Boxes*/
 
 #features-container {
    height: 300px;
 }
 
-.feature {
-   text-align: center;
-   height: 100%;
-   float: left;
-   padding: 50px;
-   width: 33.3%
-}
-
-#feature-2 {
-   background: #f7c08a;
-}
-
-.feature h3 {
+.feature-box h3 {
    padding: 20px;
 }
 
-.feature p {
+.feature-box p {
    font-size: 16px;
 }
 
-.footer {
-   background: #333;
-   padding: 20px;
-   text-align: center;
-   color: #fff;
-}
+/*About Page*/
 
 .about-info, 
 .about-img {
@@ -203,14 +193,76 @@ a {
 }
 
 #about-photo {
-   background: url("../images/photo-2.jpg") cover;
+   background: url("../images/photo-2.jpg") ;
 }
 
-.clr {
-   clear: both;
-}
+/*Testimonials*/
 
-#testimonial-section {
-   background: url("../images/test-bg.jpg");
+#testimonials {
    height: 600px;
+   background: url('../images/test-bg.jpg') no-repeat center center/cover;
+   padding-top: 40px;
+}
+
+.testimonial {
+   margin: 40px;
+   height: 100px;
+   padding: 15px;
+   border-radius: 5px;
+   opacity: .9;
+}
+
+#testimonials h2 {
+   color: white;
+   text-align: center;
+
+}
+
+.testimonial img {
+   float: left;
+   width: 75px;
+   margin-right: 20px;
+   border-radius: 50%;
+}
+
+/*Contact Page*/
+
+#contact-container {
+   height: 250px
+}
+
+#contact-form {
+   margin: 40px 100px;
+}
+
+.form-group {
+   margin-bottom: 20px;
+}
+
+#contact-form label {
+   display: block;
+   margin-bottom: 5px;
+}
+
+#contact-form textarea {
+   height: 200px;
+}
+#contact-form input,
+#contact-form textarea {
+   width: 100%;
+   padding: 1-px;
+   border: 1px #ddd solid;
+}
+
+#contact-form input:focus,
+#contact-form textarea:focus {
+   outline: none;
+   border-color: #f7c08a;
+}
+ /*Footer*/
+.footer {
+   padding: 20px;
+   text-align: center;
+   background-color: #444;
+   color: white;
 }
